--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -1,5 +1,6 @@
-$primary: #0080ff;
-$secondary: #2e5c8a;
-$accent: #75ddff;
+$primary: #61f3aa;
+$secondary: #7af5f5;
+$accent: #59f2cc;
 
-$background: #204060;
+$background: #efefef;
+$background2: #3a638d;
