fixed some styling, text was not in center in account-form, adjusted width in intro-content for larger screens

--- a/src/assets/css/_accountform.scss
+++ b/src/assets/css/_accountform.scss
@@ -29,6 +29,11 @@
 			}
 		}
 	}
+	a {
+		text-align: center;
+		display: block;
+		width: 100%;
+	}
 	.account-form-response {
 		text-align: center;
 		color: white;
